Fix layout issue with multiple tags

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -93,6 +93,8 @@
     border-radius: 10px;
     color: #FAFAFC;
     font-size: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .post-footer {
